@@ -331,7 +331,7 @@
     </include>
     <variable name="Defs_Hub_Widget">
         <value condition="Window.IsVisible(1101) + !IsEmpty(Skin.String(Widget.1101))">$INFO[Skin.String(Widget.1101)]</value>
-        <value condition="Window.IsVisible(1102) + !IsEmpty(Skin.String(Widget.1102))">$INFO[Skin.String(_.1102)]</value>
+        <value condition="Window.IsVisible(1102) + !IsEmpty(Skin.String(Widget.1102))">$INFO[Skin.String(Widget.1102)]</value>
         <value condition="Window.IsVisible(1103) + !IsEmpty(Skin.String(Widget.1103))">$INFO[Skin.String(Widget.1103)]</value>
         <value condition="Window.IsVisible(1104) + !IsEmpty(Skin.String(Widget.1104))">$INFO[Skin.String(Widget.1104)]</value>
         <value condition="Window.IsVisible(1105) + !IsEmpty(Skin.String(Widget.1105))">$INFO[Skin.String(Widget.1105)]</value>
