@@ -5,7 +5,7 @@
     <menucontrol>9000</menucontrol>
     <defaultcontrol always="true">50</defaultcontrol>
 <!-- Modification Views -->    
-    <views>50,54,502,503,504,508,509,506,51,52,59,55,56,505,53,600,57,501,58,500,156,157</views>
+    <views>50,54,502,503,504,508,509,506,51,52,59,55,56,505,53,600,57,501,58,500,156,157,158</views>
     <onload condition="System.HasAddon(script.tv.show.next.aired)">RunScript(script.tv.show.next.aired,backend=True)</onload>
     <onunload>SetProperty(NodeReturn,videos,home)</onunload>
     <onunload>SetProperty(HubReturn,$INFO[Container.FolderPath],home)</onunload>
@@ -45,7 +45,8 @@
 <!-- Add Include -->               
             <include>Viewtype_Posters_List1</include>
             <include>Viewtype_Cycle</include>
-            <include>Viewtype_BigWide_Classic</include> 
+            <include>Viewtype_BigWide_Classic</include>
+            <include>Viewtype_Banner</include> 
         </control>
 
 
