@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
     id="skin.eminence.2.mod.Krypton"
-    version="1.2.4"
+    version="1.2.5"
     name="Eminence 2.0 MOD (Krypton)"
     provider-name="jurialmunkey - Mod by Guilouz">
     <requires>
